# tarugit

./: package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: file_ops.rs  git_ops.rs  github_ops.rs  graph_ops.rs  mod.rs
src/components/: ActionsPanel.tsx  BatchDeleteBranchesModal.tsx  BranchManager.tsx  BranchSelector.tsx  CherryPickQuickModal.tsx  CommitPanel.tsx  CompareBranchesModal.tsx  ConflictResolver.tsx  CreateBranchModal.tsx  CreateStashModal.tsx  DiffViewer.tsx  ErrorBoundary.tsx  FileHierarchyModal.tsx  FileList.tsx  Footer.tsx  HistoryPanel.tsx  Navbar.tsx  OperationStatusBar.tsx  PullRequestsPanel.tsx  QuickBranchModal.tsx  QuickRepoModal.tsx  RepoManager.tsx  ShortcutHelpModal.tsx  Sidebar.tsx  StashPanel.tsx  SyncModal.tsx  TagPanel.tsx  TitleBar.tsx  Toast.tsx  UserModal.tsx
src/components/ConflictResolver/: ConflictResolver.types.ts  index.tsx
src/components/ConflictResolver/components/: ConflictBlockRow.tsx  ConflictMinimap.tsx  PostResolveModal.tsx  ThreeWayMergeViewer.tsx
src/components/ConflictResolver/hooks/: useConflictData.ts  useConflictOperations.ts  useSyncScroll.ts
src/components/graph/: BranchGraph.tsx
src/components/history/: CherryPickModal.tsx  CommitItem.tsx  FileDiffViewer.tsx  FileHistoryModal.tsx  HistoryPanel.tsx  SquashForm.tsx  utils.ts
src/hooks/: useKeyboardShortcuts.ts  useRepository.ts  useStash.ts  useUsers.ts
(+1 files in other folders)
